--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.7.1"
   },
   "devDependencies": {
