--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "InboxSieve - A Email Route Controll App",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node serve.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Fabian Zbinden",
   "license": "ISC",
@@ -13,6 +16,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
     "express": "^4.17.1",
+    "firebase-admin": "^8.6.0",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.7.1"
   },
