--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.2",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "mailgun-js": "^0.22.0",
